@@ -25,7 +25,7 @@ English
 	---------------------------------------------------------
 	Maintained by:	   Niels Leenheer (niels@creatype.nl)
 	Is up-to-date?	   Always
-	Last update:	   08 October 2002
+	Last update:	   14 October 2002
 	Translated files:  7
 	---------------------------------------------------------
 
