@@ -12,6 +12,11 @@
 
   ====================================================
 
+  14-10-2002 - settings-help
+    [u] phpAds_hlp_admin
+    [+] phpAds_hlp_admin_pw
+    [+] phpAds_hlp_admin_pw2
+
   09-10-2002 - settings-help
     [u] phpAds_hlp_type_html_auto
 
